tui/src/status/snapshots/ody_tui__status__tests__status_snapshot_uses_default_reasoning_when_config_empty.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────────────╮
│  >_ odysseythink ody (v0.1.0-alpha.2)                                       │
│  Remote:           unix:///tmp/ody-home/app-server-control/app-server-      │
│                    control.sock (v0.133.0)                                  │
│                                                                             │
│  Model:            kimi-for-coding (reasoning medium)                       │
│  Model provider:   Kimi                                                     │
│  Directory: [[workspace]]                                                   │
│  Permissions:      Custom (workspace with network access, Ask for approval) │
│  Agents.md:        <none>                                                   │
│                                                                             │
│  Token usage:      750 total  (500 input + 250 output)                      │
│  Context window:   100% left (750 used / 272K)                              │
╰─────────────────────────────────────────────────────────────────────────────╯
